# RpnEquationSolver

./: CMakeLists.txt  main.cpp
Modeling/: Constant.cpp  Constant.h  Equation.cpp  Equation.h  Evaluable.cpp  Evaluable.h  Operation.h
Parsing/: Operator.h  Parser.cpp  Parser.h
